--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "gulp-uglify": "^1.4.2",
     "jshint-stylish": "^2.0.1",
     "nodemon": "^1.8.1",
-    "run-sequence": "^1.1.4"
+    "run-sequence": "^1.1.4",
+    "gulp-ng-config": "^1.2.1"
   }
 }
